--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
                     <div class="box-icon-modern-icon fl-bigmug-line-cropping1"></div>
                     <h5 class="box-icon-modern-title"><a href="#">Projeto Arquitetônico</a></h5>
                     <div class="box-icon-modern-decor"></div>
-                    <p class="box-icon-modern-text">Descrição sobre..</p>
                   </article>
                 </div>
                 <div class="col-sm-6 wow fadeInRight" data-wow-delay=".2s">
@@ -189,7 +188,6 @@
                     <div class="box-icon-modern-icon fl-bigmug-line-paintbrush9"></div>
                     <h5 class="box-icon-modern-title"><a href="#">Projeto de Interiores</a></h5>
                     <div class="box-icon-modern-decor"></div>
-                    <p class="box-icon-modern-text">Descrição sobre..</p>
                   </article>
                 </div>
                 <div class="col-sm-6 wow fadeInRight" data-wow-delay=".3s">
@@ -197,7 +195,6 @@
                     <div class="box-icon-modern-icon fl-bigmug-line-chat55"></div>
                     <h5 class="box-icon-modern-title"><a href="#">Gerenciamento de Obra</a></h5>
                     <div class="box-icon-modern-decor"></div>
-                    <p class="box-icon-modern-text">Descrição sobre..</p>
                   </article>
                 </div>
               </div>
@@ -210,7 +207,6 @@
       <section class="section section-sm section-fluid bg-default text-center" >
         <div class="container-fluid" id="portfolio">
           <h3 class="wow fadeInLeft" >Portfólio</h3>
-          <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">Escrever algo sobre?</p>
           <div class="isotope-filters isotope-filters-horizontal">
             <button class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha" data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
             <ul class="isotope-filters-list" id="isotope-3">
@@ -254,7 +250,7 @@
                   </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"  data-lightgallery="item"></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">NOME DO PROJETO</a></h5>
+                    <h5 class="thumbnail-classic-title"><a href="#">Interiores | E+F</a></h5>
                   </div>
                   <p class="thumbnail-classic-text"><a href="#">→ Clique aqui e peça o seu orçamento agora mesmo!</a></p>
                 </div>
@@ -280,7 +276,7 @@
                   </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"  data-lightgallery="item"></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">NOME DO PROJETO</a></h5>
+                    <h5 class="thumbnail-classic-title"><a href="#">Corporativo | ME</a></h5>
                   </div>
                   <p class="thumbnail-classic-text"><a href="#">→ Clique aqui e peça o seu orçamento agora mesmo!</a></p>
                 </div>
@@ -293,7 +289,7 @@
                   </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"  data-lightgallery="item"></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">NOME DO PROJETO</a></h5>
+                    <h5 class="thumbnail-classic-title"><a href="#">Interiores | AV</a></h5>
                   </div>
                   <p class="thumbnail-classic-text"><a href="#">→ Clique aqui e peça o seu orçamento agora mesmo!</a></p>
                 </div>
